# radioseti

./: .gitignore  README.md  pyproject.toml
azimuth_aggregation/: main.py  requirements.txt
azimuth_aggregation/app/: azimuth_endpoint.py  azimuth_service.py  entity.py  read_data.py  repository.py
azimuth_aggregation/app/data/: data_fixed_h3.csv
pydantic_azimth_agg/: data_example.py  main.py  schema1.py
sectorization/: combinations_v1.py  combinations_v2.py  data.py  decay.py  visualisation_v1.py  visualisation_v2.py
sectorization2/: main.py  main2.py  main2_visualisation.py  pareto_analyzer.py  pareto_analyzer2.py  pareto_interface.py  pareto_selector_evklid.py  pareto_selector_topsis.py  sector.py  sector_cluster.py  sector_zone.py  settings.py  visualizer.py  visualizer2.py
sectorization2/data/: data.py  data_raw1.py  data_raw3.py
sectorization3/: RADIATION_PATTERN.md  RB.md  ci_ratio_analyzer.py  itu_r_f1336.py
sectorization3/data/: data.py  data_raw2.py
sectorization3/radiation_pattern/commscope/: 2NPX210R-V1_Port 2 - -45_08DT_1805.msi  LLPX310R-V1_Port 1 - +45_04DT_2300.msi  NPX204F-0_Port 1 - +45_00DT_1710.msi  NPX206R_Port 1 - +45_10DT_2110.msi  NPX210R_Port 1 - +45_02DT_1950.msi
sectorization3/radiation_pattern/huawei/ATR4518R7/: ATR4518R7_0806_X_CO_M45_00T.msi  ATR4518R7_0806_X_CO_M45_01T.msi  (+482 more)
sectorization3/radiation_pattern/kathrein/: 741785X1.MSI  741785X2.MSI  741785_0902_X_CO_P45.msi  741785_0948_X_CO_P45.msi  80010465_1855_x_co.msi  80010621_1855_x_co_m45_04t.msi  80010621v01_1855_x_co_m45_04t.msi  80010636_1855_x_co_m45_06t.msi
