[project]
name = "radioseti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "h3>=4.5.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "pyproj>=3.7.2",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]
